# Software-HotkeyWindowMap

./: .gitignore  xxx_test.go
HotkeyNancy/: Taskfile.yml  go.mod  go.sum  hotkeys.go  main.go
HotkeyNancy/frontend/: index.html
HotkeyNancy/frontend/bindings/changeme/: index.js
HotkeyNancy/frontend/bindings/hotkeynancy/: hotkeyservice.js
HotkeyNancy/frontend/public/: style.css
hotkeymapper/: Cargo.toml
hotkeymapper/src/: keybinds.rs  main.rs  windows.rs
hotkeynancy/: .gitignore  HWNDManager.go  Taskfile.yml  WindowManager.go  go.mod  go.sum  main.go
hotkeynancy/frontend/: index.html
hotkeynancy/frontend/bindings/changeme/: hwndmanager.js  index.js  models.js  windowmanager.js
hotkeynancy/frontend/public/: style.css
hotkeynancy/osapi/: core.go  hwnd.go  hwnd_core.go  hwnd_helpers.go  keylogger.go
hotkeynancy/src/: handles.rs  main.rs
hotkeynancy_makepad/hotkeynancy/: Cargo.toml  makepad_state0.ron
hotkeynancy_makepad/hotkeynancy/src/: app.rs  main.rs
hotkeynancy_slint/nancy/: Cargo.toml
hotkeynancy_slint/nancy/src/: main.rs
hotkeynancy_slint/nancy/src/handles/: mod.rs
hotkeynancy_slint/nancy/src/hotkeys/: mod.rs
hotkeynancy_slint/nancy/ui/: app-window.slint
nancy/: Taskfile.yml  WindowManager.go  go.mod  go.sum  main.go
nancy/frontend/: index.html  registry.html
nancy/osapi/: core.go  helpers.go  hwnd_core.go  info.go  keylogger.go  monitor.go  reg.go  vars.go  window.go
nancyhotkeys/: Cargo.toml
nancyhotkeys/src/: conf.rs  main.rs  windows.rs
rust_previous/hotkeynancy/: Cargo.toml
rust_previous/hotkeynancy/src/: main.rs
(+8 files in other folders)
