[package]
name = "hotkeymapper"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
regex = "1.11.1"
serde = { version  = "1.0.219", features = ["derive"] } 
serde_json = "1.0.140"
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef", "processthreadsapi", "psapi", "handleapi", "winnt", "memoryapi", "ntdef", "ntstatus", "libloaderapi"] }
