[package]
name = "Nancy"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.12.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef"] }

[build-dependencies]
slint-build = "1.12.1"
